# chatcli

./: .env  .gitignore  LICENSE  README.md  cspell.json  main.py  pyproject.toml  requirements.txt
chatcli/: __init__.py  __main__.py  ask.py  cli.py  history.py  main.py  model.py  utils.py
