[tool.poetry]
name = "chatcli"
version = "0.1.0"
description = "CLI implementation of Chat-GPT3"
authors = ["Madiba Hudson-Quansah <mhquansah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.4"
typer = "^0.7.0"
rich = "^13.2.0"
appdirs = "^1.4.4"
transformers = "^4.26.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[tool.poetry.scripts]
chatcli = "chatcli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
