[tool.poetry]
name = "chatcli"
version = "1.3.8"
description = "CLI implementation of Chat-GPT"
authors = ["Madiba Hudson-Quansah <mhquansah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
typer = "^0.7.0"
rich = "^13.2.0"
appdirs = "^1.4.4"
nltk = "^3.8.1"
prompt-toolkit = "^3.0.38"
aiohttp = "3.9.0b0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pynvim = "^0.4.3"
ruff = "^0.0.257"

[tool.poetry.scripts]
chatcli = "chatcli.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
